Fixed gallery,add hover on links,fix wrap gallery

--- a/assets/css/reset.scss
+++ b/assets/css/reset.scss
@@ -21,4 +21,5 @@ img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    vertical-align: top;
 }
